--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
   push:
     branches: [ "!master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "develop" ]
     
 jobs:
   run_tests_and_add_coverage_to_pull_request:
